--- a/host-app/src/index.html
+++ b/host-app/src/index.html
@@ -6,6 +6,11 @@
     <script type="module" src="./host-controller.ts"></script>
   </head>
   <body>
-
+      <nav>
+        <button class="shopping-cart">Shopping Cart</button>
+      </nav>
+      <sci-router-outlet></sci-router-outlet>
+      <sci-router-outlet name="SHOPPING-CART"></sci-router-outlet>
+      <sci-router-outlet name="DEV-TOOLS"></sci-router-outlet>
   </body>
 </html>
