--- a/products-app/src/product-view.html
+++ b/products-app/src/product-view.html
@@ -3,11 +3,9 @@
   <head>
     <title>Products</title>
     <link rel="stylesheet" type="text/css" href="styles.scss">
-    <script type="module" src="./products-controller.ts"></script>
+    <script type="module" src="./product-view-controller.ts"></script>
   </head>
   <body>
-    <h1>Products</h1>
-
-    <ul class="products"></ul>
+    <h1>Product</h1>
   </body>
 </html>
